<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.venus.nacos.extend</groupId>
    <artifactId>venus-nacos-extend</artifactId>
    <version>0.0.1</version>
    <name>venus-nacos-extend</name>
    <description>venus-nacos-extend</description>
    <properties>
        <java.version>1.8</java.version>
    </properties>
    <dependencies>

    </dependencies>

    <build>
    </build>

</project>
